force-app/main/default/objects/Legal_Plan_Surveys__c/Legal_Plan_Surveys__c.object-meta.xml
<CustomObject>
    <label>Legal Plan Surveys</label>
    <nameField>
        <label>Legal Plan Surveys  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Legal Plan Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>