force-app/main/default/objects/Legal_Plan_Surveys__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Legal Plan Surveys</relationshipLabel>
    <relationshipName>Legal_Plan_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>