force-app/main/default/objects/Legal_Plan_Surveys__c/fields/Active_Appt_Holder__c.field-meta.xml
<CustomField>
    <fullName>Active_Appt_Holder__c</fullName>
    <formula>Appt_Holder__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Appt Holder</label>
    <type>Checkbox</type>
</CustomField>