force-app/main/default/objects/Legal_Plan_Surveys__c/fields/Any_other_feedback__c.field-meta.xml
<CustomField>
    <fullName>Any_other_feedback__c</fullName>
    <label>Any other feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>