force-app/main/default/objects/Legal_Plan_Surveys__c/fields/Appointment_Holder__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Holder__c</fullName>
    <formula>Account__r.Appointment_Holder__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appointment Holder</label>
    <type>Text</type>
</CustomField>