force-app/main/default/objects/Legal_Plan_Surveys__c/fields/Appt_Holder__c.field-meta.xml
<CustomField>
    <fullName>Appt_Holder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appt Holder</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Legal_Plan_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>