force-app/main/default/objects/Legal_Plan_Surveys__c/fields/Areas_to_Improve__c.field-meta.xml
<CustomField>
    <fullName>Areas_to_Improve__c</fullName>
    <label>Areas to Improve</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Friendliness</fullName>
            </value>
            <value>
                <fullName>Topic Knowledge</fullName>
            </value>
            <value>
                <fullName>Ease of Use</fullName>
            </value>
            <value>
                <fullName>Punctuality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>