force-app/main/default/objects/Legal_Plan_Surveys__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <formula>Account__r.Primary_Contact__r.FirstName + &quot; &quot; + Account__r.Primary_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client</label>
    <type>Text</type>
</CustomField>