force-app/main/default/objects/Legal_Plan_Surveys__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Legal Plan Surveys</relationshipLabel>
    <relationshipName>Legal_Plan_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>