force-app/main/default/objects/Legal_Plan_Surveys__c/fields/Detractor__c.field-meta.xml
<CustomField>
    <fullName>Detractor__c</fullName>
    <formula>IF( Recommendation__c &lt; 7, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Detractor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>