force-app/main/default/objects/Legal_Plan_Surveys__c/fields/Detractor_pilot__c.field-meta.xml
<CustomField>
    <fullName>Detractor_pilot__c</fullName>
    <formula>IF(  Recommendation_pilot__c &lt; 7, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Detractor (pilot)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>