force-app/main/default/objects/Legal_Plan_Surveys__c/fields/email__c.field-meta.xml
<CustomField>
    <fullName>email__c</fullName>
    <formula>Account__r.email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>email</label>
    <type>Text</type>
</CustomField>