force-app/main/default/objects/Legal_Plan_Surveys__c/fields/Friendliness__c.field-meta.xml
<CustomField>
    <fullName>Friendliness__c</fullName>
    <label>Friendliness</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>