force-app/main/default/objects/Legal_Plan_Surveys__c/fields/Knowledgeable__c.field-meta.xml
<CustomField>
    <fullName>Knowledgeable__c</fullName>
    <label>Knowledgeable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>