force-app/main/default/objects/Legal_Plan_Surveys__c/fields/LZ_LP_ID__c.field-meta.xml
<CustomField>
    <fullName>LZ_LP_ID__c</fullName>
    <formula>Appt_Holder__r.LZ_LP_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LZ LP ID</label>
    <type>Text</type>
</CustomField>