force-app/main/default/objects/Legal_Plan_Surveys__c/fields/NPS_Calculation__c.field-meta.xml
<CustomField>
    <fullName>NPS_Calculation__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPS Calculation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>