force-app/main/default/objects/Legal_Plan_Surveys__c/fields/Passive__c.field-meta.xml
<CustomField>
    <fullName>Passive__c</fullName>
    <formula>iF(AND( Recommendation__c &gt; 6, Recommendation__c &lt; 9), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Passive</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>