force-app/main/default/objects/Legal_Plan_Surveys__c/fields/Passive_pilot__c.field-meta.xml
<CustomField>
    <fullName>Passive_pilot__c</fullName>
    <formula>iF(AND(  Recommendation_pilot__c &gt; 6,  Recommendation_pilot__c &lt; 9), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Passive (pilot)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>