force-app/main/default/objects/Legal_Plan_Surveys__c/fields/Promoter_pilot__c.field-meta.xml
<CustomField>
    <fullName>Promoter_pilot__c</fullName>
    <formula>IF(  Recommendation_pilot__c &gt; 8, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promoter (pilot)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>