force-app/main/default/objects/Legal_Plan_Surveys__c/fields/Quality_of_Advice__c.field-meta.xml
<CustomField>
    <fullName>Quality_of_Advice__c</fullName>
    <label>Quality of Advice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>