force-app/main/default/objects/Legal_Plan_Surveys__c/fields/Recommendation_pilot__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_pilot__c</fullName>
    <label>Recommendation (pilot)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>