force-app/main/default/objects/Legal_Plan_Surveys__c/fields/Responsiveness__c.field-meta.xml
<CustomField>
    <fullName>Responsiveness__c</fullName>
    <label>Responsiveness</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>