force-app/main/default/objects/Legal_Plan_Surveys__c/fields/Topics__c.field-meta.xml
<CustomField>
    <fullName>Topics__c</fullName>
    <label>Topics</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Questions about trust</fullName>
            </value>
            <value>
                <fullName>How to get an ITIN</fullName>
            </value>
            <value>
                <fullName>Foreign Tax questions</fullName>
            </value>
            <value>
                <fullName>Tax implications(status change)</fullName>
            </value>
            <value>
                <fullName>Bookkeeping questions</fullName>
            </value>
            <value>
                <fullName>Business entity information</fullName>
            </value>
            <value>
                <fullName>Business Deductions</fullName>
            </value>
            <value>
                <fullName>Bus. Income tax reductions strategies</fullName>
            </value>
            <value>
                <fullName>State specific business tax questions</fullName>
            </value>
            <value>
                <fullName>State specific personal tax questions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>