force-app/main/default/objects/Legal_Plan_Surveys__c/fields/What_we_did_well__c.field-meta.xml
<CustomField>
    <fullName>What_we_did_well__c</fullName>
    <label>What we did well</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Friendliness</fullName>
            </value>
            <value>
                <fullName>Topic Knowledge</fullName>
            </value>
            <value>
                <fullName>Ease of Use</fullName>
            </value>
            <value>
                <fullName>Punctuality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>