force-app/main/default/objects/Legal_Plan_Surveys__c/validationRules/Lock_Appt_Holder_field.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Appt_Holder_field</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED( Appt_Holder__c),
NOT(ISBLANK(PRIORVALUE(Appt_Holder__c))))</errorConditionFormula>
    <errorMessage>Can&apos;t change the Appt Holder</errorMessage>
</ValidationRule>